--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Additional step for tests to run
         run: |
           cp -R paths.yaml tests/testthat/paths.yaml
-          cp -R config/default config/params
+          cp -R config/default config/user
           cp -R config tests/testthat/config
           cp -R inst tests/testthat/inst
 
