--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,7 +60,7 @@ Collate:
     'export_params.R'
     'export_spectra.R'
     'extract_spectra.R'
-    'fake_edges.R'
+    'fake_features_edges.R'
     'fake_features_components.R'
     'fake_no_rt.R'
     'form_adducts_neg.R'
@@ -78,7 +78,7 @@ Collate:
     'parse_yaml_params.R'
     'parse_yaml_paths.R'
     'prepare_adducts.R'
-    'prepare_edges.R'
+    'prepare_features_edges.R'
     'prepare_features_classification.R'
     'prepare_features_components.R'
     'prepare_gnps.R'
