--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,8 @@ export(export_params)
 export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
-export(fake_edges)
 export(fake_features_components)
+export(fake_features_edges)
 export(fake_no_rt)
 export(form_adducts_neg)
 export(form_adducts_pos)
@@ -34,9 +34,9 @@ export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
 export(prepare_adducts)
-export(prepare_edges)
 export(prepare_features_classification)
 export(prepare_features_components)
+export(prepare_features_edges)
 export(prepare_gnps)
 export(prepare_isdb_lotus)
 export(prepare_library)
