--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(get_params)
 export(harmonize_spectra)
 export(import_spectra)
 export(log_debug)
+export(log_pipe)
 export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
