--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,14 +78,14 @@ Collate:
     'parse_yaml_params.R'
     'parse_yaml_paths.R'
     'prepare_adducts.R'
-    'prepare_features_edges.R'
+    'prepare_config.R'
     'prepare_features_classification.R'
     'prepare_features_components.R'
+    'prepare_features_edges.R'
     'prepare_gnps.R'
     'prepare_isdb_lotus.R'
     'prepare_library.R'
     'prepare_lotus.R'
-    'prepare_params.R'
     'prepare_sirius.R'
     'prepare_spectral_matches.R'
     'prepare_taxa.R'
