--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(annotate_non_ms1)
 export(clean_bio)
 export(clean_chemo)
 export(complement_metadata)
+export(copy_config)
 export(create_dir)
 export(decorate_bio)
 export(decorate_chemo)
@@ -35,6 +36,7 @@ export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
 export(prepare_adducts)
+export(prepare_config)
 export(prepare_features_classification)
 export(prepare_features_components)
 export(prepare_features_edges)
@@ -42,7 +44,6 @@ export(prepare_gnps)
 export(prepare_isdb_lotus)
 export(prepare_library)
 export(prepare_lotus)
-export(prepare_params)
 export(prepare_sirius)
 export(prepare_spectral_matches)
 export(prepare_taxa)
