--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
 export(prepare_adducts)
+export(prepare_closed)
 export(prepare_config)
 export(prepare_features_classification)
 export(prepare_features_components)
