--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., any::visNetwork
+          extra-packages: any::pkgdown, local::.
           needs: website
           pak-version: devel # See https://github.com/r-lib/actions/issues/559
 
