--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     yaml
 Suggests:
     knitr,
-    testthat
+    testthat,
+    visNetwork
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
