--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,8 +62,8 @@ Collate:
     'export_params.R'
     'export_spectra.R'
     'extract_spectra.R'
-    'fake_features_edges.R'
     'fake_features_components.R'
+    'fake_features_edges.R'
     'fake_no_rt.R'
     'form_adducts_neg.R'
     'form_adducts_pos.R'
@@ -100,6 +100,7 @@ Collate:
     'read_features.R'
     'read_metadata.R'
     'read_results.R'
+    'round_reals.R'
     'replace_gnps_job_id.R'
     'treat_names_sirius.R'
     'weight_bio.R'
