--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(read_features)
 export(read_metadata)
 export(read_results)
 export(replace_gnps_job_id)
+export(round_reals)
 export(treat_names_sirius)
 export(weight_bio)
 export(weight_chemo)
