--- a/config/default/prepare_library.yaml
+++ b/config/default/prepare_library.yaml
@@ -10,6 +10,7 @@ files:
       #' List of prepared structure organism pairs libraries. STRING
       processed: 
         - data/interim/libraries/lotus_prepared.tsv.gz
+        - data/interim/libraries/closed_prepared.tsv.gz
 
       #' Merged structure organism pairs library. STRING
       merged: data/interim/libraries/library.tsv.gz
