--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,7 +54,7 @@ Collate:
     'annotate_non_ms1.R'
     'clean_bio.R'
     'clean_chemo.R'
-    'complement_metadata.R'
+    'complement_structures_metadata.R'
     'create_dir.R'
     'decorate.R'
     'dist_groups.R'
@@ -64,7 +64,6 @@ Collate:
     'extract_spectra.R'
     'fake_features_components.R'
     'fake_features_edges.R'
-    'fake_no_rt.R'
     'form_adducts_neg.R'
     'form_adducts_pos.R'
     'get_benchmark.R'
@@ -72,6 +71,7 @@ Collate:
     'get_example_sirius.R'
     'get_example_spectra.R'
     'get_last_version_from_zenodo.R'
+    'get_organism_taxonomy_ott.R'
     'get_params.R'
     'harmonize_spectra.R'
     'import_spectra.R'
@@ -82,12 +82,11 @@ Collate:
     'prepare_adducts.R'
     'prepare_closed.R'
     'prepare_config.R'
-    'prepare_features_classification.R'
     'prepare_features_components.R'
     'prepare_features_edges.R'
     'prepare_gnps.R'
     'prepare_isdb_lotus.R'
-    'prepare_library.R'
+    'prepare_libraries.R'
     'prepare_lotus.R'
     'prepare_sirius.R'
     'prepare_spectral_matches.R'
@@ -102,6 +101,7 @@ Collate:
     'read_results.R'
     'round_reals.R'
     'replace_gnps_job_id.R'
+    'split_tables_sop.R'
     'treat_names_sirius.R'
     'weight_bio.R'
     'weight_chemo.R'
