--- a/config/default/process_annotations.yaml
+++ b/config/default/process_annotations.yaml
@@ -40,8 +40,8 @@ files:
   #' Annotation files.
   annotations:
 
-    #' Treated annotations file. STRING
-    treated: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_treated.tsv.gz
+    #' Filled annotation files. STRING
+    filled: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_filled.tsv.gz
     
     #' Final results file. STRING
     processed: FinalResults.tsv
@@ -59,7 +59,7 @@ files:
     sop:
 
       #' Merged structure organism pairs library. STRING
-      merged: data/interim/libraries/library.tsv.gz
+      merged: data/interim/libraries/keys.tsv.gz
 
   #' Networks files.
   networks:
