--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(annotate_ms1)
 export(annotate_non_ms1)
 export(clean_bio)
 export(clean_chemo)
-export(complement_metadata)
+export(complement_structures_metadata)
 export(create_dir)
 export(decorate_bio)
 export(decorate_chemo)
@@ -18,7 +18,6 @@ export(export_spectra_2)
 export(extract_spectra)
 export(fake_features_components)
 export(fake_features_edges)
-export(fake_no_rt)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
@@ -26,6 +25,7 @@ export(get_example_features)
 export(get_example_sirius)
 export(get_example_spectra)
 export(get_last_version_from_zenodo)
+export(get_organism_taxonomy_ott)
 export(get_params)
 export(harmonize_spectra)
 export(import_spectra)
@@ -37,12 +37,11 @@ export(parse_yaml_paths)
 export(prepare_adducts)
 export(prepare_closed)
 export(prepare_config)
-export(prepare_features_classification)
 export(prepare_features_components)
 export(prepare_features_edges)
 export(prepare_gnps)
 export(prepare_isdb_lotus)
-export(prepare_library)
+export(prepare_libraries)
 export(prepare_lotus)
 export(prepare_sirius)
 export(prepare_spectral_matches)
@@ -57,6 +56,7 @@ export(read_metadata)
 export(read_results)
 export(replace_gnps_job_id)
 export(round_reals)
+export(split_tables_sop)
 export(treat_names_sirius)
 export(weight_bio)
 export(weight_chemo)
@@ -94,7 +94,6 @@ importFrom(curl,curl_download)
 importFrom(curl,curl_fetch_memory)
 importFrom(data.table,data.table)
 importFrom(data.table,foverlaps)
-importFrom(data.table,rbindlist)
 importFrom(data.table,setkey)
 importFrom(docopt,docopt)
 importFrom(dplyr,across)
