--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(purrr,list_flatten)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
+importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(readr,read_lines)
