--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,6 +68,7 @@ Collate:
     'form_adducts_pos.R'
     'get_benchmark.R'
     'get_example_features.R'
+    'get_example_metadata.R'
     'get_example_sirius.R'
     'get_example_spectra.R'
     'get_last_version_from_zenodo.R'
