--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
 export(get_example_features)
+export(get_example_metadata)
 export(get_example_sirius)
 export(get_example_spectra)
 export(get_last_version_from_zenodo)
@@ -142,10 +143,8 @@ importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(readr,read_lines)
-importFrom(readr,read_tsv)
 importFrom(readr,write_delim)
 importFrom(readr,write_lines)
-importFrom(readr,write_tsv)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
