--- a/config/default/fake_features_components.yaml
+++ b/config/default/fake_features_components.yaml
@@ -17,7 +17,7 @@ files:
   features: 
 
     #' Raw features file. STRING
-    raw: data/source/examples/features.tsv.gz
+    raw: data/source/examples/features.csv
 
 
 #' MS related parameters.
@@ -30,8 +30,10 @@ ms:
 #' Names of the different variables in the input files.
 names:
 
+  features: "row ID"
+
   #' Name of "precursor m/z" variable in the input. STRING
-  precursor: mz
+  precursor: "row m/z"
 
   #' Name of "retention time" variable in the input. STRING
-  rt: rt
+  rt: "row retention time"
