--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(decorate_chemo)
 export(decorate_ms1)
 export(dist_get)
 export(dist_groups)
+export(download_file)
 export(export_output)
 export(export_params)
 export(export_spectra)
@@ -20,11 +21,6 @@ export(fake_features_components)
 export(fake_features_edges)
 export(form_adducts_neg)
 export(form_adducts_pos)
-export(get_benchmark)
-export(get_example_features)
-export(get_example_metadata)
-export(get_example_sirius)
-export(get_example_spectra)
 export(get_last_version_from_zenodo)
 export(get_organism_taxonomy_ott)
 export(get_params)
@@ -91,8 +87,6 @@ importFrom(crayon,red)
 importFrom(crayon,silver)
 importFrom(crayon,white)
 importFrom(crayon,yellow)
-importFrom(curl,curl_download)
-importFrom(curl,curl_fetch_memory)
 importFrom(data.table,data.table)
 importFrom(data.table,foverlaps)
 importFrom(data.table,setkey)
@@ -135,14 +129,13 @@ importFrom(dplyr,summarize_all)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(dplyr,where)
 importFrom(jsonlite,fromJSON)
 importFrom(purrr,map_df)
 importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
-importFrom(readr,read_lines)
 importFrom(readr,write_delim)
-importFrom(readr,write_lines)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
@@ -155,14 +148,11 @@ importFrom(stringr,str_match)
 importFrom(stringr,str_remove)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
-importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate_rows)
-importFrom(tidyselect,where)
 importFrom(utils,combn)
 importFrom(utils,download.file)
-importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
