--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Imports:
     BiocParallel,
     CompoundDb,
     crayon,
-    curl,
     data.table,
     docopt,
     dplyr,
@@ -36,7 +35,6 @@ Imports:
     tarchetypes,
     tibble,
     tidyr,
-    tidyselect,
     utils,
     yaml
 Suggests:
@@ -58,6 +56,7 @@ Collate:
     'create_dir.R'
     'decorate.R'
     'dist_groups.R'
+    'download_file.R'
     'export_output.R'
     'export_params.R'
     'export_spectra.R'
@@ -66,11 +65,6 @@ Collate:
     'fake_features_edges.R'
     'form_adducts_neg.R'
     'form_adducts_pos.R'
-    'get_benchmark.R'
-    'get_example_features.R'
-    'get_example_metadata.R'
-    'get_example_sirius.R'
-    'get_example_spectra.R'
     'get_last_version_from_zenodo.R'
     'get_organism_taxonomy_ott.R'
     'get_params.R'
