--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,31 +15,31 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.1.0)
 Imports:
-    BiocParallel (>= 1.32.5),
-    CompoundDb (>= 1.2.1),
-    crayon (>= 1.5.2),
-    data.table (>= 1.14.8),
-    docopt (>= 0.7.1),
-    dplyr (>= 1.1.0),
-    jsonlite (>= 1.8.4),
-    MetaboAnnotation (>= 1.2.0),
-    MsBackendMgf (>= 1.6.0),
-    MsCoreUtils (>= 1.10.0),
-    readr (>= 2.1.4),
-    rotl (>= 3.0.14),
-    Spectra (>= 1.8.1),
+    BiocParallel,
+    CompoundDb,
+    crayon,
+    data.table,
+    docopt,
+    dplyr,
+    jsonlite,
+    MetaboAnnotation,
+    MsBackendMgf,
+    MsCoreUtils,
+    readr,
+    rotl,
+    Spectra,
     stats,
-    stringr (>= 1.5.0),
-    targets (>= 0.14.2),
-    tarchetypes (>= 0.7.4),
-    tibble (>= 3.1.8),
-    tidyr (>= 1.3.0),
+    stringr,
+    targets,
+    tarchetypes,
+    tibble,
+    tidyr,
     utils,
-    yaml (>= 2.3.7),
+    yaml,
 Suggests:
-    knitr (>= 1.42),
-    testthat (>= 3.1.6),
-    visNetwork (>= 2.1.2)
+    knitr,
+    testthat,
+    visNetwork
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
