--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Collate:
     'fake_features_edges.R'
     'form_adducts_neg.R'
     'form_adducts_pos.R'
+    'get_gnps_tables.R'
     'get_last_version_from_zenodo.R'
     'get_organism_taxonomy_ott.R'
     'get_params.R'
@@ -88,13 +89,8 @@ Collate:
     'pretreat_names_sirius.R'
     'process_annotations.R'
     'process_spectra.R'
-    'read_clusters.R'
-    'read_edges.R'
-    'read_features.R'
-    'read_metadata.R'
-    'read_results.R'
     'round_reals.R'
-    'replace_gnps_job_id.R'
+    'replace_id.R'
     'split_tables_sop.R'
     'treat_names_sirius.R'
     'weight_bio.R'
