--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(fake_features_components)
 export(fake_features_edges)
 export(form_adducts_neg)
 export(form_adducts_pos)
+export(get_gnps_tables)
 export(get_last_version_from_zenodo)
 export(get_organism_taxonomy_ott)
 export(get_params)
@@ -46,12 +47,7 @@ export(prepare_taxa)
 export(pretreat_names_sirius)
 export(process_annotations)
 export(process_spectra)
-export(read_clusters)
-export(read_edges)
-export(read_features)
-export(read_metadata)
-export(read_results)
-export(replace_gnps_job_id)
+export(replace_id)
 export(round_reals)
 export(split_tables_sop)
 export(treat_names_sirius)
