--- a/config/default/params.yaml
+++ b/config/default/params.yaml
@@ -79,6 +79,7 @@ files:
 
       #' List of spectral matching results. STRING
       spectral:
+        - data/interim/annotations/example_gnps.tsv
         - data/interim/annotations/example_isdb.tsv.gz
 
       #' Directory containing the sirius results. STRING
@@ -100,7 +101,7 @@ files:
   features: 
 
     #' Raw features file. STRING
-    raw: data/source/examples/features.tsv.gz
+    raw: data/source/features.tsv.gz
 
   #' Libraries files.
   libraries:
@@ -213,7 +214,7 @@ files:
   spectral:
 
     #' Raw spectral file. STRING
-    raw: data/source/examples/spectra.mgf
+    raw: data/source/spectra.mgf
 
 
 #' GNPS related parameters.
