--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(readr,read_tsv)
 importFrom(readr,write_delim)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
