--- a/config/default/fake_features_edges.yaml
+++ b/config/default/fake_features_edges.yaml
@@ -5,7 +5,7 @@ files:
   features: 
 
     #' Raw features file. STRING
-    raw: data/source/features.csv
+    raw: data/source/example_features.csv
 
   #' Networks files.
   networks:
