--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,10 +80,10 @@ Collate:
     'prepare_features_components.R'
     'prepare_features_edges.R'
     'prepare_gnps.R'
-    'prepare_isdb_lotus.R'
     'prepare_libraries.R'
     'prepare_lotus.R'
     'prepare_sirius.R'
+    'prepare_spectral_libraries.R'
     'prepare_spectral_matches.R'
     'prepare_taxa.R'
     'pretreat_names_sirius.R'
