--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,10 +38,10 @@ export(prepare_config)
 export(prepare_features_components)
 export(prepare_features_edges)
 export(prepare_gnps)
-export(prepare_isdb_lotus)
 export(prepare_libraries)
 export(prepare_lotus)
 export(prepare_sirius)
+export(prepare_spectral_libraries)
 export(prepare_spectral_matches)
 export(prepare_taxa)
 export(pretreat_names_sirius)
@@ -58,7 +58,6 @@ importFrom(BiocParallel,SerialParam)
 importFrom(CompoundDb,CompDb)
 importFrom(CompoundDb,Spectra)
 importFrom(CompoundDb,createCompDb)
-importFrom(CompoundDb,make_metadata)
 importFrom(MetaboAnnotation,CompareSpectraParam)
 importFrom(MetaboAnnotation,MatchForwardReverseParam)
 importFrom(MetaboAnnotation,matchSpectra)
