--- a/paths.yaml
+++ b/paths.yaml
@@ -14,6 +14,7 @@ config:
       gnps: config/default/prepare_gnps.yaml
       libraries: config/default/prepare_libraries.yaml
       sirius: config/default/prepare_sirius.yaml
+      spectral_libraries: config/default/prepare_spectral_libraries.yaml
       spectral_matches: config/default/prepare_spectral_matches.yaml
       taxa: config/default/prepare_taxa.yaml
     process:
@@ -72,17 +73,17 @@ data:
           taxonomies:
             classyfire: data/interim/libraries/structures_taxonomies_classyfire.tsv.gz
             npc: data/interim/libraries/structures_taxonomies_npc.tsv.gz
-    spectra:
-      path: data/interim/spectra
-      hmdb:
-        pos: data/interim/spectra/isdb_hmdb_pos.mgf
-        neg: data/interim/spectra/isdb_hmdb_neg.mgf
-      lotus:
-        pos: data/interim/spectra/isdb_lotus_pos.mgf
-        neg: data/interim/spectra/isdb_lotus_neg.mgf
-      mona:
-        pos: data/interim/spectra/mona_pos.mgf
-        neg: data/interim/spectra/mona_neg.mgf
+      spectra:
+        path: data/interim/libraries/spectra
+        hmdb:
+          pos: data/interim/libraries/spectra/isdb_hmdb_pos.sqlite
+          neg: data/interim/libraries/spectra/isdb_hmdb_neg.sqlite
+        lotus:
+          pos: data/interim/libraries/spectra/isdb_lotus_pos.sqlite
+          neg: data/interim/libraries/spectra/isdb_lotus_neg.sqlite
+        mona:
+          pos: data/interim/libraries/spectra/mona_pos.sqlite
+          neg: data/interim/libraries/spectra/mona_neg.sqlite
     taxa:
       path: data/interim/taxa
   processed:
@@ -111,6 +112,7 @@ data:
           pos: data/source/libraries/spectra/isdb_pos.mgf
           neg: data/source/libraries/spectra/isdb_neg.mgf
         mona_lcmsms: data/source/libraries/spectra/MoNA-export-LC-MS-MS_Spectra.sdf
+        with_rt: data/source/libraries/spectra/spectral_lib_mini_with_rt.mgf
 doc:
   path: doc
 img:
@@ -140,6 +142,7 @@ urls:
     spectral_lib_mini: 
       neg: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_neg.mgf
       pos: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_pos.mgf
+      with_rt: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_with_rt.mgf
   hmdb:
     metabolites: https://hmdb.ca/system/downloads/current/hmdb_metabolites.zip
     spectra:
