--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(CompoundDb,createCompDb)
 importFrom(MetaboAnnotation,CompareSpectraParam)
 importFrom(MetaboAnnotation,MatchForwardReverseParam)
 importFrom(MetaboAnnotation,matchSpectra)
+importFrom(MetaboAnnotation,matchedData)
 importFrom(MsBackendMgf,MsBackendMgf)
 importFrom(MsBackendMgf,readMgf)
 importFrom(MsCoreUtils,gnps)
