--- a/config/default/prepare_features_components.yaml
+++ b/config/default/prepare_features_components.yaml
@@ -1,7 +1,7 @@
 #' Files.
 files:
 
-  #' Annotation files.
+  #' Annotations files.
   annotations:
 
     #' List of pretreated annotations. STRING
@@ -9,8 +9,9 @@ files:
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_sirius_pretreated.tsv.gz
+      # - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_exp_rt_pretreated.tsv.gz
     
-    #' Filled annotation files. STRING
+    #' Filled annotations files. STRING
     filled: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_filled.tsv.gz
 
   #' Networks files.
