--- a/config/default/fake_features_components.yaml
+++ b/config/default/fake_features_components.yaml
@@ -1,7 +1,7 @@
 #' Files.
 files:
 
-  #' Annotation files.
+  #' Annotations files.
   annotations:
 
     #' List of pretreated annotations. STRING
@@ -9,6 +9,7 @@ files:
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_sirius_pretreated.tsv.gz
+      # - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_exp_rt_pretreated.tsv.gz
 
     #' Filled annotations file. STRING
     filled: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_faked_filled.tsv.gz
